// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Snapshots should match snapshot with Text 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "NaN Holo Condensed",
          "fontSize": 60,
          "fontWeight": "700",
          "lineHeight": 60,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "NaN Holo Condensed",
          "fontSize": 40,
          "fontWeight": "700",
          "lineHeight": 40,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "NaN Holo Condensed",
          "fontSize": 32,
          "fontWeight": "700",
          "lineHeight": 32,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "NaN Holo Condensed",
          "fontSize": 24,
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "NaN Holo Condensed",
          "fontSize": 40,
          "fontWeight": "700",
          "lineHeight": 40,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 48,
          "fontWeight": "500",
          "lineHeight": 56,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
          "lineHeight": 48,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 32,
          "fontWeight": "500",
          "lineHeight": 40,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 32,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    fontSize="medium"
    inverted={false}
    light={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "500",
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "700",
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "900",
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 1,
          "lineHeight": 16,
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 10,
          "fontWeight": "400",
          "lineHeight": 12,
        },
      ]
    }
  >
    Live the mission
  </Text>,
]
`;

exports[`<Text /> Snapshots should match snapshot with Text fontSize 1`] = `
[
  <Text
    fontSize="xsmall"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 20,
        },
      ]
    }
  >
    Live the small mission
  </Text>,
  <Text
    fontSize="medium"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 16,
        },
      ]
    }
  >
    Live the medium mission
  </Text>,
  <Text
    fontSize="xlarge"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "400",
        },
      ]
    }
  >
    Live the xlarge mission
  </Text>,
  <Text
    fontSize="xxxlarge"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
        },
      ]
    }
  >
    Live the xxxlarge mission
  </Text>,
]
`;

exports[`<Text /> Snapshots should match snapshot with Text light 1`] = `
[
  <Text
    light={true}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 48,
          "fontWeight": "500",
          "lineHeight": 56,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    light={true}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
          "lineHeight": 48,
        },
      ]
    }
  >
    Live the mission
  </Text>,
  <Text
    light={true}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 32,
          "fontWeight": "500",
          "lineHeight": 40,
        },
      ]
    }
  >
    Live the mission
  </Text>,
]
`;

exports[`<Text /> Snapshots should match snapshot with Text size 1`] = `
[
  <Text
    size="xsmall"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        },
      ]
    }
  >
    Live the small mission
  </Text>,
  <Text
    size="medium"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
      ]
    }
  >
    Live the medium mission
  </Text>,
  <Text
    size="xlarge"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "400",
        },
      ]
    }
  >
    Live the xlarge mission
  </Text>,
  <Text
    size="xxxlarge"
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
        },
      ]
    }
  >
    Live the xxxlarge mission
  </Text>,
]
`;

exports[`<Text /> Snapshots should match snapshot with Text variant 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#D8385E",
          "fontFamily": "Rubik",
          "fontSize": 48,
          "fontWeight": "500",
          "lineHeight": 56,
        },
      ]
    }
    variant="primary"
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
          "lineHeight": 48,
        },
      ]
    }
    variant="secondary"
  >
    Live the mission
  </Text>,
  <Text
    style={
      [
        {
          "color": undefined,
          "fontFamily": "Rubik",
          "fontSize": 32,
          "fontWeight": "500",
          "lineHeight": 40,
        },
      ]
    }
    variant="tertiary"
  >
    Live the mission
  </Text>,
]
`;

exports[`<Text /> Snapshots should match snapshot with background color prop system 1`] = `
<Text
  backgroundColor="vibin"
  fontSize="medium"
  inverted={false}
  light={false}
  style={
    [
      {
        "backgroundColor": "#D8385E",
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with border prop system 1`] = `
<Text
  bRadius="small"
  border="small"
  fontSize="medium"
  inverted={false}
  light={false}
  style={
    [
      {
        "borderColor": "black",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with display prop system 1`] = `
<Text
  display="flex"
  fontSize="medium"
  inverted={false}
  light={false}
  style={
    [
      {
        "color": "#231B22",
        "display": "flex",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with elevation prop system 1`] = `
<Text
  elevation="medium"
  fontSize="medium"
  inverted={false}
  light={false}
  style={
    [
      {
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 5,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with flexes prop system 1`] = `
<Text
  display="flex"
  flexGrow={1}
  fontSize="medium"
  inverted={false}
  light={false}
  style={
    [
      {
        "color": "#231B22",
        "display": "flex",
        "flexGrow": 1,
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with inverted Text 1`] = `
<Text
  fontSize="medium"
  inverted={true}
  light={false}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with overflows prop system 1`] = `
<Text
  fontSize="medium"
  inverted={false}
  light={false}
  overflow="scroll"
  style={
    [
      {
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
        "overflow": "scroll",
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with position prop system 1`] = `
<Text
  fontSize="medium"
  inverted={false}
  left="small"
  light={false}
  position="absolute"
  style={
    [
      {
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "left": 16,
        "lineHeight": 24,
        "position": "absolute",
        "top": 16,
      },
    ]
  }
  top="small"
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with spacing prop system 1`] = `
<Text
  fontSize="medium"
  inverted={false}
  light={false}
  m="medium"
  paddingHorizontal="small"
  paddingVertical="large"
  style={
    [
      {
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 20,
        "paddingBottom": 24,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 24,
      },
    ]
  }
>
  Live the mission
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with truncated lines Text 1`] = `
<Text
  fontSize="medium"
  inverted={false}
  light={false}
  numberOfLines={1}
  style={
    [
      {
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Live the mission
  <br />
  even in one line
</Text>
`;

exports[`<Text /> Snapshots should match snapshot with typography prop system 1`] = `
<Text
  color="text.primary"
  fontSize="small"
  fontWeight="medium"
  inverted={false}
  light={false}
  lineHeight="small"
  style={
    [
      {
        "color": "#231B22",
        "fontFamily": "Rubik",
        "fontSize": 14,
        "fontWeight": "500",
        "lineHeight": 20,
      },
    ]
  }
>
  Live the mission
</Text>
`;
